Fix z-index for menu backdrop

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -100,7 +100,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 2;
+  z-index: 999;
 
   overflow: auto;
 
@@ -125,7 +125,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 898;
 
   width: 100svw;
   height: 100svh;
